Mon Jul 11 08:10:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Added Bug_2174_Regression to the list of tests. It will fail
          until the fix for this bug is in the archive

Sun Jul  10 23:24:12 UTC 2005  Gan Deng  <gan.deng@vanderbilt.edu>

        * etc/DAnCE.doxygen:

	  Added doxygen configuration file for DAnCE.

Sat Jul  9 06:24:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_Thread.h:
          Doxygen improvements

Sat Jul  9 06:18:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_Thread.inl (thr_cancel):
          Fixed VxWorks implementation.  Thanks to Abhijit Sachdev <abhi
	  at qualcomm dot com> for motivating this fix.

Fri Jul  8 15:42:18 2005  Steve Huston  <shuston@riverace.com>

	* ace/Array_Map.h: Extended the range of Sun C++ compilers not
	  providing a fully standards-compliant STL to include C++ 5.7
	  (Studio 10). To include a compliant STL would break backward
	  binary compatibility with C++ 5.0 - 5.6, so Sun won't (yet)
	  do it. They do, however, include Stlport 4 with C++ 5.7. You can
	  enable this by building ACE with stlport=1.

	* ace/Basic_Types.h (ACE_ULongLong): Added a name to the anonymous
	  struct declared in the anonymous union. Silences a warning from
	  Sun Studio 10.
	  Added __amd64 to the "little endian" machine indicators. Corrects
	  this check for Solaris 10 x86.

	* ace/config-sunos5.10.h: Noted that Studio 10 (C++ 5.7) works
	  as well.

	* include/makeinclude/platform_sunos5_sunc++.GNU: If -fast is required,
	  be sure it goes to the left of any -xarch options on the command
	  line, else it'll override -xarch. Also, added support for building
	  with stlport=1 on Studio 10 (C++ 5.7).

	* tests/CDR_Array_Test.cpp: When saying "Data OK", print type
	  name (%s), not truncated pointer (%d).

Fri Jul  8 12:37:15 2005  Douglas C. Schmidt  <schmidt@cs.wustl.edu>
